# CAsMan

./: .gitignore  .pre-commit-config.yaml  DISCONNECT_FEATURE.md  Makefile  README.md  UNIFIED_WEB_APP_SUMMARY.md  VERSION_MANAGER_USAGE.md  assembled_connections  casman_visualization_20250807_012857.json  config.yaml  config.yaml.template  coverage_check.sh  debug_env.py  gen_add_part_numbers.py  gen_barcode_printpages.py  gen_init_part_number.py  print_connections_database.py  pyproject.toml  read_parts_db.py  requirements-antenna.txt  requirements-dev.txt  requirements.txt  scan_and_assemble.py   setup.py  test_chain_logic.py  test_debug_db.py  test_scanning.py  test_web_fix.py  update_coverage.py  version_manager.py  visualize_analog_chains_term.py  visualize_analog_chains_web.py  visualizer.py
.github/: README.md
.github/hooks/: pre-commit
.github/scripts/: update_coverage.py
.github/workflows/: ci.yml  docs.yml  update-docs.yml
barcodes/: COAXLONG_P1_00001_00258.tex  COAXLONG_P2_00001_00258.tex  COAXSHORT_P1_00001_00258.tex  COAXSHORT_P2_00001_00258.tex
casman/: __init__.py  assembly.py  barcode_utils.py  cli.py  config.py  visualization.py
casman/antenna/: __init__.py  array.py  chain.py  grid.py  kernel_index.py  sync.py
casman/assembly/: __init__.py  chains.py  connections.py  data.py  interactive.py
casman/barcode/: __init__.py  generation.py  operations.py  printing.py  validation.py
casman/cli/: __init__.py  assembly_commands.py  barcode_commands.py  database_commands.py  main.py  parts_commands.py  scanner_commands.py  sync_commands.py  utils.py  visualization_commands.py  web_commands.py
casman/config/: __init__.py  core.py  environments.py  schema.py  utils.py
casman/database/: __init__.py  antenna_positions.py  connection.py  github_sync.py  initialization.py  migrations.py  operations.py  quota.py  snap_boards.py  sync.py
casman/parts/: __init__.py  db.py  generation.py  interactive.py  part.py  search.py  types.py  validation.py
casman/templates/: admin.html  analog_chains.html  home.html  scan_connect.html
casman/visualization/: __init__.py  core.py  core_new.py  web.py
casman/web/: __init__.py  app.py  scanner.py  server.py  visualize.py
database/: assembled_casm.db  grid_positions.csv  parts.db  parts.db.backup  snap_boards.csv  snap_feng_map.yaml
dev_scripts/: gen_add_part_numbers.py  gen_barcode_printpages.py  gen_init_part_number.py  gen_snap_feng_map_yaml.py  read_parts_db.py  scan_and_assemble.py  scan_connect_web.py  visualize_analog_chains_term.py  visualize_analog_chains_web.py
dev_scripts/database/: assembled_casm.db
docs/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  STORAGE_CLASS_MAINTENANCE_SUMMARY.md  _config.yml  antenna.md  antenna_module.md  antenna_quickstart.md  api.md  api_reference.md  assembly.md  barcode_utils.md  cli.md  config.md  database.md  database_backup_quickstart.md  database_backup_sync.md  database_schema.md  development.md  examples.md  generate_docs.py  generate_docs_modern.py  generate_docs_old.py  generator_modernization.md  github_sync_implementation.md  grid_coordinates.md  index.md  installation_troubleshooting.md  main.md  migration_guide.md  parts.md  r2_quota_enforcement.md  r2_storage_class_maintenance.md  safety_features.md  systemd_service_setup.md  unified_web_app.md  visualization.md  web_app_refactoring.md
docs/auto-generated/: README.md  antenna.md  api_reference.md  assembly.md  barcode.md  cli.md  config.md  database.md  parts.md  web.md  (+1 more)
logs/: connection_modification_logs
scripts/: check_service.sh  clear_assembled_db.py  clear_databases.py  clear_parts_db.py  demo_database_dirs.py  demo_database_package.py  example_antenna_array.py  example_baseline_calculations.py  example_scientific_analysis.py  example_snap_port_lookup.py  fix_null_part_types.py  gen_add_part_numbers.py  gen_barcode_printpages.py  gen_init_part_numbers.py  generate_grid_coordinates.py  generate_snap_boards.py  install_service.sh  plot_grid_positions.py  print_assembled_db.py  print_parts_db.py  read_parts_db.py  remove_duplicate_parts.py  scan_and_assemble.py  scan_and_disassemble.py  scan_connect_web.py  setup_env.sh  test_coordinates.py  test_oneline_install.sh  uninstall_service.sh  update_service.sh  visualize_analog_chains_term.py  visualize_analog_chains_web.py  web_app.py
test_db/: README.md  assembled_casm.db  parts.db
test_generation/: assembled_casm.db  parts.db
tests/: conftest.py  test_antenna.py  test_antenna_array.py  test_antenna_grid.py  test_antenna_kernel_index.py  test_antenna_multi_array.py  test_assembly.py  test_assembly_connections.py  test_barcode.py  test_barcode_enhanced.py  test_barcode_utils.py  test_cli.py  test_cli_database_commands.py  test_cli_sync.py  test_config.py  test_config_enhanced.py  test_database.py  test_database_antenna_positions.py  test_database_enhanced.py  test_database_sync.py  test_parts.py  test_parts_enhanced.py  test_visualization.py  test_web.py  test_web_app.py  test_web_scanner.py  test_web_server.py  test_web_visualize.py
(+8 files in other folders)
