[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casman"
version = "1.1.0"
description = "CASM Assembly Manager - A collection of tools to manage and visualize CASM assembly"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pranav Sanghavi", email = "pranav.sanghavi@cfa.harvard.edu"}
]
maintainers = [
    {name = "Pranav Sanghavi", email = "prnv.snghv@gmail.com"}
]
keywords = ["assembly", "barcode", "visualization", "radio astronomy", "tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "gunicorn>=21.0.0",
    "pillow>=8.0.0",
    "python-barcode>=0.13.0",
    "pyyaml>=6.0.0",          
    "argcomplete>=1.12.0",   
]

[project.optional-dependencies]
antenna = [
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0", 
    "black>=23.0",
    "pylint>=3.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Coherent-All-Sky-Monitor/CAsMan"
Repository = "https://github.com/Coherent-All-Sky-Monitor/CAsMan.git"
Issues = "https://github.com/Coherent-All-Sky-Monitor/CAsMan/issues"
Documentation = "https://github.com/Coherent-All-Sky-Monitor/CAsMan/blob/main/README.md"

[project.scripts]
casman = "casman.cli:main"

[tool.setuptools]
packages = ["casman"]
include-package-data = true

[tool.setuptools.package-data]
casman = [
    "templates/*.html",
    "static/fonts/*",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "1.1.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::ResourceWarning",
]

[mypy]
python_version = "1.1.0"

[mypy-argcomplete]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "barcode.*",
    "PIL.*",
]
ignore_missing_imports = true
